--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <section id="departments" class="departments section">
 
         <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
+        <div class="container section-title mt-5" data-aos="fade-up">
           <h2>Berita</h2>
           <p>Berikut adalah beberapa berita atau Artikel terikini mengenai demam berdarah (DBD)</p>
         </div><!-- End Section Title -->
